finalizing features, products and team page

--- a/Mpps-frontend/index.html
+++ b/Mpps-frontend/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="Mpps-frontend/src/assets/Mppslogo.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/Mpps-frontend/src/assets/Mppslogo.svg" /> -->
+    <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/../src/assets/Mppslogo1.svg" />
+    <link
+      href="https://api.mapbox.com/mapbox-gl-js/v1.10.1/mapbox-gl.css"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MPPS</title>
   </head>
